<resources>
    <string name="app_name">Ekraf Mobile App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jeffri Ferdinand</string>
    <string name="nav_header_subtitle">jeffriferdinand@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="new_info">Tambah Info Terbaru</string>
    <string name="search_new">Pencarian Terbaru</string>
    <string name="new_info_creative_economy">Info Ekraf Terbaru</string>
    <string name="info_entrepreneur">Pelaku Ekraf</string>
    <string name="setting_app">Pengaturan Aplikasi</string>
    <string name="setting">Pengaturan</string>
    <string name="contact_us">Hubungi Kami</string>
    <string name="terms_and_privacy_police">Syarat Dan Kebijakan Privasi</string>
    <string name="about_us">Tentang Kami</string>
    <string name="exit">Keluar</string>
    <string name="version_app">Ekraf Mobile 2022</string>
    <string name="title_name">Nama</string>
    <string name="title_et_email">Email</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \n\n  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \n\n  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_ipsum_second">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="image">image</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="masukkan_email_anda">Masukkan Email Anda</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masukkan_kata_anda">Masukkan Kata Sandi Anda</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="nama">Nama</string>
    <string name="masukkan_nama_anda">Masukkan Nama Anda</string>
    <string name="ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="ulangi_kata_sandi_anda">Ulangi Kata Sandi Anda</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah Punya Akun ?</string>
    <string name="masuk_disini">Masuk Disini</string>
    <string name="fragment_favorite">Fragment Favorite</string>
    <string name="info_ekraf_terbaru">Info Ekraf Terbaru</string>
    <string name="kuliner">Kuliner</string>
    <string name="mantau_balikpapan">Mantau Balikpapan</string>
    <string name="diposting">Diposting :</string>
    <string name="_1_juli_2022">1 Juli 2022</string>
    <string name="diposting_oleh">Diposting Oleh :</string>
    <string name="jefri_ferdinand">Jefri Ferdinand</string>
    <string name="pelaku_ekraf">Pelaku Ekraf</string>
    <string name="studio_aplikasi_22_balikpapan">Studio Aplikasi 22 Balikpapan</string>
    <string name="sub_sektor_aplikasi">Sub Sektor: Aplikasi</string>
    <string name="pemilik">Pemilik :</string>
    <string name="badan_hukum">Badan Hukum :</string>
    <string name="perseroan_terbatas_pt">Perseroan Terbatas (PT)</string>
    <string name="tahun_berdiri">Tahun Berdiri :</string>
    <string name="_2022">2022</string>
    <string name="alamat_lengkap">Alamat Lengkap :</string>
    <string name="jl_jendral_sudirman_kota_balikpapan">Jl.Jendral Sudirman Kota Balikpapan</string>
    <string name="deskripsi_singkat_pelaku_ekraf">Deskripsi Singkat Pelaku Ekraf :</string>
    <string name="ekraf_besar">Ekraf Besar,</string>
    <string name="ekonomi_berjaya">Ekonomi Berjaya,</string>
    <string name="info_terbaru_ekraf">Info Terbaru Ekraf</string>
    <string name="ruko_balikpapan_baru">Ruko Balikpapan Baru</string>
    <string name="kompleks_balikpapan_baru">Kompleks Balikpapan Baru</string>
    <string name="aplikasi">Aplikasi</string>
    <string name="aplikasi_ekraf_mobile">Aplikasi Ekraf Mobile</string>
    <string name="co_workspace">Co-WorkSpace</string>
    <string name="jl_sudirman_kota_nbalikpapan">Jl. Sudirman Kota \nBalikpapan</string>
    <string name="sub_sektor_ekonomi_kreatif">Sub Sektor Ekonomi Kreatif</string>
    <string name="pengaturan_profile">Pengaturan Profile</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="_085323453243">085323453243</string>
    <string name="sub_sektor_ekraf">Sub Sektor Ekraf</string>
    <string name="alamat">Alamat</string>
    <string name="jl_pangeran_dipenogoro_no_23">JL.Pangeran Dipenogoro No.23</string>
    <string name="bahasa">Bahasa</string>
    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="perbarui_profil">Perbarui Profil</string>
    <string name="fragment_search">Fragment Search</string>
    <string name="tambah_data_pelaku_ekraf">Tambah Data Pelaku Ekraf</string>
    <string name="tambah_info_terbaru_ekraf">Tambah Info Terbaru Ekraf</string>
    <string name="judul_info_terbaru">Judul Info Terbaru</string>
    <string name="hint_info_terbaru">Masukkan Judul Info Terbaru</string>
    <string name="sub_ekraf">Sub Ekraf Terbaru</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>