<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_add_data_pelaku_ekraf"
        android:icon="@drawable/ic_adds"
        android:title="@string/tambah_data_pelaku_ekraf" />
        <item
            android:id="@+id/nav_add_new_info"
            android:icon="@drawable/ic_adds"
            android:title="@string/new_info" />
        <item
            android:id="@+id/nav_search_merchant"
            android:icon="@drawable/ic_search_nav"
            android:title="@string/search_new" />
        <item
            android:id="@+id/nav_new_info"
            android:icon="@drawable/ic_info_new"
            android:title="@string/new_info_creative_economy" />
        <item
            android:id="@+id/nav_merchant"
            android:icon="@drawable/ic_merchant"
            android:title="@string/info_entrepreneur" />

    <item android:title="@string/setting_app">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_setting"
                android:title="@string/setting">
            </item>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_contact_us"
                android:title="@string/contact_us">
            </item>
            <item
                android:id="@+id/nav_terms_and_privacy_policy"
                android:icon="@drawable/ic_privacy_police"
                android:title="@string/terms_and_privacy_police">
            </item>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us"
                android:title="@string/about_us">
            </item>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_logout"
                android:title="@string/exit">
            </item>
        </menu>
    </item>
    <item android:title="@string/version_app">

    </item>

</menu>