<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.navigationBottom.homepage.HomePageFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="404dp"
            android:layout_height="240dp"
            android:background="@drawable/image_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="22dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:text="@string/pelaku_ekraf"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="50dp"
                android:layout_weight="3"
                android:background="@drawable/bg_card"
                android:elevation="36dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="14dp"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/product_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="240dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:src="@drawable/img_product_3"
                        android:contentDescription="@string/image" />

                    <TextView
                        android:id="@+id/ekraf_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/studio_aplikasi_22_balikpapan"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:id="@+id/subsektor_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/sub_sektor_aplikasi"
                        android:textColor="@color/purple_700"
                        android:textSize="@dimen/_12ssp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:text="@string/pemilik"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11ssp" />

                        <TextView
                            android:id="@+id/owner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:text="@string/jefri_ferdinand"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:text="@string/badan_hukum"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11ssp" />
                        <TextView
                            android:id="@+id/badan_hukum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:text="@string/perseroan_terbatas_pt"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11ssp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:text="@string/tahun_berdiri"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11ssp" />

                        <TextView
                            android:id="@+id/tahun_berdiri"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:text="@string/_2022"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:text="@string/alamat_lengkap"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11ssp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_location"
                            android:contentDescription="@string/image" />

                        <TextView
                            android:id="@+id/alamat_lengkap"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_4sdp"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/jl_jendral_sudirman_kota_balikpapan"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11ssp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/deskripsi_singkat_pelaku_ekraf"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />

                    <TextView
                        android:id="@+id/artikel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_30sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/lorem_ipsum"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>